Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/3-grc/0-gatewayclass-grc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: grc-kong-gatewayclass
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/grc-kong-gateway-controller
