Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/3-grc/5-sanction.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sanction-svc
  namespace: grc-ns
spec:
  selector:
    app: sanction-svc
  ports:
    - port: 8089
      targetPort: 9099
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanction-svc
  namespace: grc-ns
  labels:
    app: sanction-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanction-svc
  template:
    metadata:
      labels:
        app: sanction-svc
    spec:
      containers:
        - name: sanction-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9099
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
